<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DriverFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.183"
            android:textSize="40sp" />

        <Button
            android:id="@+id/gameButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/startGame"
            app:layout_constraintLeft_toLeftOf="@id/titleText"
            app:layout_constraintRight_toRightOf="@id/titleText"
            app:layout_constraintTop_toBottomOf="@id/titleText"
            android:layout_marginTop="60dp" />

        <Button
            android:id="@+id/triviaButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/trivia"
            app:layout_constraintLeft_toLeftOf="@id/gameButton"
            app:layout_constraintRight_toRightOf="@id/gameButton"
            app:layout_constraintTop_toBottomOf="@id/gameButton"
            android:layout_marginTop="10dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>